--- a/src/views/styles/commons.scss
+++ b/src/views/styles/commons.scss
@@ -1,3 +1,9 @@
+@import 'normalize.css';
+
+html {
+  font-size: 16px;
+}
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
