--- a/src/views/styles/index.scss
+++ b/src/views/styles/index.scss
@@ -16,14 +16,11 @@ body {
   background: #f0f0f0;
 }
 
-.container {
-  padding: 2em;
-}
-
 .title-field {
   h1 {
     font-weight: 100;
     font-size: 4em;
     text-align: center;
+    margin-bottom: 0.25em;
   }
 }
