Google calendar API connection and basic operation

--- a/src/views/templates/layout.hbs
+++ b/src/views/templates/layout.hbs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <script defer src="https://apis.google.com/js/api.js"></script>
     <link rel='stylesheet' href='index.css' />
   </head>
   <body>
